# jmap-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.forgejo/workflows/: ci.yml
.playwright-mcp/: page-2026-06-02T02-35-15-705Z.yml  page-2026-06-02T02-35-28-683Z.yml  page-2026-06-02T02-56-04-171Z.yml  page-2026-06-02T02-56-15-743Z.yml  page-2026-06-02T03-05-16-573Z.yml  page-2026-06-02T03-05-37-203Z.yml
src/: audit.rs  audit_mailbox.rs  auth.rs  config.rs  content_sandbox.rs  jmap_client.rs  last_used.rs  logto_oidc.rs  main.rs  mcp.rs  metrics.rs  oauth_metadata.rs  oauth_proxy.rs  oauth_redirect.rs  rate_limit.rs  session.rs  telemetry.rs  token_introspect.rs  url_safety.rs
src/mcp/: attachments.rs  compose.rs  delete.rs  flags.rs  mailbox_mgmt.rs  profile.rs  reads.rs  spam.rs
